# spacetraders_cc

./: .gitignore  CLAUDE.md  Cargo.toml  MARKETPLACE_TRADING_FIX_PLAN.md  config.example.toml  config.toml  debug_contracts.rs  temp_shipyard_finder.rs
examples/: analyze_electronics_market.rs  check_credits_and_agent.rs  check_credits_and_try_basic_mining.rs  check_iron_inventory.rs  check_repair_cost_raw.rs  check_waypoint_details.rs  coordinated_survey_mining.rs  debug_contracts.rs  debug_mining_capability.rs  debug_shipyard_api.rs  debug_stuck_ships.rs  direct_iron_ore_mining.rs  dock_and_repair_all.rs  efficient_mining_with_laser.rs  electronics_strategy.rs  emergency_fleet_repair_protocol.rs  emergency_fuel_delivery.rs  equip_mining_fleet.rs  examine_current_system.rs  examine_deposits.rs  examine_shipyards.rs  find_faction_waypoints.rs  find_shipyards.rs  find_shipyards_correctly.rs  find_shipyards_quickly.rs  fix_refiner_and_mine_ore.rs  fleet_condition_analysis.rs  fuel_and_survey_fix.rs  immediate_ship_repair.rs  install_mining_at_shipyard.rs  install_mining_equipment.rs  install_surveyor_mounts.rs  intelligent_fleet_monitor.rs  intensive_mining_ba5f.rs  iron_ore_blitz_campaign.rs  local_refuel_solution.rs  market_intelligence_system.rs  maximum_scale_iron_domination.rs  mine_at_current_location.rs  mining_efficiency_optimizer.rs  (+36 more)
src/: admiral.rs  config.rs  debug.rs  lib.rs  main.rs  main_monolithic.rs  output_broker.rs  verbosity.rs
src/client/: api.rs  api_broker.rs  brokered_client.rs  mod.rs  priority_client.rs
tests/: api_integration_tests.rs
(+39 files in other folders)
