[package]
name = "spacetraders_cc"
version = "0.1.2"
edition = "2024"

[[example]]
name = "ship_analysis"
path = "examples/ship_analysis.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
